--- a/TimedPower/Main.resx
+++ b/TimedPower/Main.resx
@@ -574,7 +574,7 @@
     <value>148, 22</value>
   </data>
   <data name="FormMenuStrip_NewTaskFile.Text" xml:space="preserve">
-    <value>新建任务文件</value>
+    <value>任务文件编辑器</value>
   </data>
   <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
     <value>145, 6</value>
