多条更新内容： 修复了部分不准确的英语翻译 准备2.9.7-pre1的发布

--- a/TimedPower/AutoTaskForm.en-us.resx
+++ b/TimedPower/AutoTaskForm.en-us.resx
@@ -220,7 +220,7 @@
     <value>Shutdown</value>
   </data>
   <data name="ActionSelect.Items1" xml:space="preserve">
-    <value>Reboot</value>
+    <value>Restart</value>
   </data>
   <data name="ActionSelect.Items2" xml:space="preserve">
     <value>Sleep</value>
@@ -229,10 +229,10 @@
     <value>Hibernate</value>
   </data>
   <data name="ActionSelect.Items4" xml:space="preserve">
-    <value>UserLock</value>
+    <value>Lock</value>
   </data>
   <data name="ActionSelect.Items5" xml:space="preserve">
-    <value>UserOff</value>
+    <value>LogOff</value>
   </data>
   <data name="ActionSelect.Location" type="System.Drawing.Point, System.Drawing">
     <value>266, 56</value>
