--- a/TimedPower/TaskEditor.en-us.resx
+++ b/TimedPower/TaskEditor.en-us.resx
@@ -122,7 +122,7 @@
     <value>Shutdown</value>
   </data>
   <data name="ActionSelect.Items1" xml:space="preserve">
-    <value>Reboot</value>
+    <value>Restart</value>
   </data>
   <data name="ActionSelect.Items2" xml:space="preserve">
     <value>Sleep</value>
@@ -131,10 +131,10 @@
     <value>Hibernate</value>
   </data>
   <data name="ActionSelect.Items4" xml:space="preserve">
-    <value>UserLock</value>
+    <value>Lock</value>
   </data>
   <data name="ActionSelect.Items5" xml:space="preserve">
-    <value>UserOff</value>
+    <value>LogOff</value>
   </data>
   <data name="timeTypeSelect.Items" xml:space="preserve">
     <value>After</value>
